[project]
name = "python-api-lyrics"
version = "0.1.0"
description = ""
authors = [
    {name = "Clovis de Melo",email = "106097988+clovis-de-melo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
